--- a/xmind.html
+++ b/xmind.html
@@ -238,6 +238,15 @@
     <img class="mt-[56px]" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/xmind_ixd_detail.png">
     <div class="mt-[96px] px-[96px] flex ">
         <div class="flex w-2/5">
+            <p class="PF-sm text-black text-[72px]">03 任务演示</p>
+        </div>
+        <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
+            <p class="PF-sm text-black text-[32px]">以广告创意团队需要同步生成高匹配度的文案与视觉设计为例，您将看到Xmind·AI如何有序处理复杂的多模态任务。</p>
+        </div>
+    </div>
+    <img class="mt-[56px]" src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/xmind_task.png">
+    <div class="mt-[96px] px-[96px] flex">
+        <div class="flex w-2/5">
             <p class="PF-sm text-black text-[72px]">更进一步</p>
         </div>
         <div class="flex-col w-3/5 py-[16px] space-y-[36px]">
