--- a/byme.html
+++ b/byme.html
@@ -103,11 +103,11 @@
   <div class="mb-[96px] mx-[96px] flex space-x-[96px]">
     <div class="flex w-1/3 flex-col space-y-[24px]">
       <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research1.png">
-      <p class="text-[#808080]">超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
+      <p class="text-[#808080]">理论层面：超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
       <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research2.png">
-      <p class="text-[#808080]">涵盖约40款产品的竞品分析文档。我负责撰写了产品核心业务设计分析的部分。</p>
+      <p class="text-[#808080]">应用层面：涵盖约40款产品的竞品分析文档。详细分析了海外社交产品的竞争格局和业务特征。</p>
     </div>
     <div class="flex w-1/3 flex-col space-y-[24px]">
       <a href="https://www.figma.com/proto/CenI7ayoWFui4v9SVl46TR/Miya-%E4%BD%93%E9%AA%8C%E8%AF%84%E4%BC%B0%E6%8A%A5%E5%91%8A?page-id=0%3A1&node-id=1-2&p=f&viewport=365%2C165%2C0.1&t=kX4VrNdOikHZ1mQH-1&scaling=contain&content-scaling=fixed"
@@ -115,7 +115,7 @@
         <img class="transition-all duration-500 ease-in-out transform hover:scale-110"
           src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research3.png">
       </a>
-      <p class="text-[#808080]">针对公司现运营产品展开了体验分析工作。基于重点功能的数据提出了设计建议。</p>
+      <p class="text-[#808080]">反思层面：基于理论和应用层面的文档，我从反思层面对公司现运营产品展开了体验分析工作。</p>
     </div>
   </div>
   <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
@@ -123,7 +123,7 @@
   </div>
   <div class=" bg-white px-[96px] pt-[96px] flex space-x-[36px]">
     <div>
-      <p class="w-2/3 text-[48px] PF-sm colorful_title">研究结论包括四个关键问题。我们通过HMW法转译设计目的，并使用GSM模型指导体验设计策略：</p>
+      <p class="w-2/3 text-[48px] PF-sm colorful_title">我们定义了四个关键问题，并通过HMW法转译为设计目的，再使用GSM模型指导体验设计策略：</p>
     </div>
   </div>
   <div class="px-[96px] pb-[24px] pt-[56px]">
@@ -179,16 +179,16 @@
       class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
       <p class="text-[#000000] text-[32px] PF-sm">💡我们如何平衡情感化表达与功能效率的对抗性需求？</p>
       <p class="text-black/60 text-[20px] PF-r">
-        · 如何平衡游戏化叙事与操作效率的矛盾？<br>
-        · 如何使学习过程符合心流曲线？</p>
+        · 如何与产运端进行博弈？<br>
+        · 如何在功能在增长中维系情感体验？</p>
     </div>
     <div
       class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
       <p class="text-[#000000] text-[32px] PF-sm">💡我们如何在功能迭代过程中维持系统的视觉秩序和可扩展性？</p>
       <p class="text-black/60 text-[20px] PF-r">
-        · 如何实现基础要素弹性扩展？<br>
+        · 如何使商业目标与设计秩序共生？<br>
         · 如何让新内容继承系统基因？<br>
-        · 如何使商业目标与设计秩序共生？</p>
+        · 如何保证设计落地与追踪？</p>
     </div>
   </div>
 
