--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       </div>
       <!-- Xmind -->
-      <div class="w-1/2 h-auto cursor-not-allowed">
+      <div class="w-1/2 h-auto">
         <div
           class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
           <a href="xmind.html" target="_blank">
