--- a/byme.html
+++ b/byme.html
@@ -238,7 +238,7 @@
   <!-- 先看亮点 -->
   <div class="bg-[#F5F7FA] px-[96px]">
     <div class="flex">
-      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/01.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/01_2.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_01.png">
       </div>
@@ -252,7 +252,7 @@
       </div>
     </div>
     <div class="flex">
-      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/04.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/04_2.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_04.png">
       </div>
