--- a/byme.html
+++ b/byme.html
@@ -242,7 +242,7 @@
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_01.png">
       </div>
-      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/02.png"
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/02_2.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_02.png">
       </div>
