--- a/xmind.html
+++ b/xmind.html
@@ -134,7 +134,7 @@
                 </div>
                 <div
                     class="flex-row space-y-[16px] bg-[#DBFFCC] rounded-[32px] border border-[#4DFF00] px-[36px] py-[32px]">
-                    <p class="text-black text-[32px] PF-sm">表层交互隐喻与底层逻辑的认知割裂</p>
+                    <p class="text-black text-[32px] PF-sm">思维链可视化如何降低认知负荷</p>
                     <p class="text-black/60 text-[24px] PF-r">
                         在部分公开隐藏层信息的基础上，如何通过思维链可视化技术降低用户认知负荷？既要暴露关键决策节点，又要防止过度技术细节造成理解混淆。</p>
                 </div>
