--- a/byme.html
+++ b/byme.html
@@ -13,7 +13,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
-<body class="min-w-[1376px]">
+<body class="min-w-[1700px]">
   <!--进度条 -->
   <div id="progress-container"
     style="position: fixed; top: 0; left: 0; width: 100%; height: 5px; background-color: #F5F7FA; z-index: 9999; display: none;">
@@ -53,8 +53,8 @@
       <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_logo.png">
     </div>
     <div>
-      <p class="text-[40px] PF-sm animate__animated animate__fadeInRight">心动来电、视频匹配、热聊房间，<br>
-        从0到1设计差异化社交体验。</p>
+      <p class="text-[40px] PF-sm animate__animated animate__fadeInRight">看我如何重新设计视频速配，以创造陌生社交新体验，<br>并在此过程中平衡商业化与用户体验。
+      </p>
     </div>
   </div>
   <!-- Overview -->
@@ -67,194 +67,136 @@
     </div>
     <div>
       <p class="text-[32px] PF-sm">Overview</p>
-      <p class="pt-[24px] text-[24px] PF-r text-black/60">Byme是一个以音视频社交玩法<br>
-        为主的APP，主要面向海外（东<br>
-        南亚、港澳台）用户。</p>
+      <p class="pt-[24px] text-[24px] PF-r text-black/60">Client: 迈越<br>
+        Tools: Sketch, Figma, Blender...<br>
+        Timeline: 2023.11 - 2024.12</p>
     </div>
     <div>
       <p class="text-[32px] PF-sm">Keywords</p>
-      <p class="pt-[24px] text-[24px] PF-r text-black/60">Team: 迈越<br>
-        Tools: Sketch, Figma, Blender...<br>
-        Timeline: 2023.10 - 2024.3</p>
+      <p class="pt-[24px] text-[24px] PF-r text-black/60">GSM<br>
+        3D Visual Design<br>
+        Problem Solving</p>
     </div>
   </div>
   <div>
-    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover.png">
+    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_cover.png">
   </div>
 
-
-  <!-- 最后看看Byme诞生的故事 -->
-  <!-- 导航 -->
-  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
-    <p class="text-[48px] PF-sm pt-[64px]">项目背景。</p>
+  <!--preface-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Preface</p>
+    <p class="text-black/80 PF-m text-[48px] mb-[56px]">
+      Byme是一款以音视频玩法为主的泛娱乐社交产品，主要面向海外（尤其是港澳台和东南亚）市场，其核心营收玩法包括视频/语音速配、付费IM、语音聊天室等。我参与了从0到1的项目落地过程，并负责了超过70%功能的交互及UX/UI设计。
+    </p>
+    <p class="text-black/50 PF-m text-[20px]">如果您的时间紧迫，希望浏览总体成果，而不是阅读完整的案例研究，<a
+        class="text-black PF-m text-[20px] hover:underline bg-[#7FFFFF]"
+        href="#finaldesign">可以点此前往页面底部，直接浏览Byme的主要设计成果。</a></p>
   </div>
-  <div class=" bg-white px-[96px] pt-[96px] flex space-x-[36px]">
-    <div class="w-2/3">
-      <p class="w-full text-[48px] PF-sm colorful_title">身处竞争激烈的出海社交市场，我们如何精准定位体验问题，使产品脱颖而出？</p>
-    </div>
-  </div>
-  <div class="px-[96px] py-[56px]">
-    <p class="w-2/3 PF-m text-[24px] text-[#808080]">
-      我们针对东南亚、港澳台市场开展了数次市场和用户研究。这些研究持续了7天左右，我主要负责撰写公司现运营产品的体验报告等部分。<br><br>
-      <a class="text-black PF-sm hover:underline"
-        href="https://www.figma.com/proto/CenI7ayoWFui4v9SVl46TR/Miya-%E4%BD%93%E9%AA%8C%E8%AF%84%E4%BC%B0%E6%8A%A5%E5%91%8A?page-id=0%3A1&node-id=1-2&p=f&viewport=365%2C165%2C0.1&t=kX4VrNdOikHZ1mQH-1&scaling=contain&content-scaling=fixed"
-        target="_blank">💡您可以点此查看我负责撰写的体验报告。</a>
-  </div>
-  <div class="mb-[96px] mx-[96px] flex space-x-[96px]">
-    <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research1.png">
-      <p class="text-[#808080]">理论层面：超过1万字的体验分析报告。从媒介进化的角度，深入分析了音视频社交产品的体验变迁。</p>
-    </div>
-    <div class="flex w-1/3 flex-col space-y-[24px]">
-      <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research2.png">
-      <p class="text-[#808080]">应用层面：涵盖约40款产品的竞品分析文档。详细分析了海外社交产品的竞争格局和业务特征。</p>
-    </div>
-    <div class="flex w-1/3 flex-col space-y-[24px]">
-      <a href="https://www.figma.com/proto/CenI7ayoWFui4v9SVl46TR/Miya-%E4%BD%93%E9%AA%8C%E8%AF%84%E4%BC%B0%E6%8A%A5%E5%91%8A?page-id=0%3A1&node-id=1-2&p=f&viewport=365%2C165%2C0.1&t=kX4VrNdOikHZ1mQH-1&scaling=contain&content-scaling=fixed"
-        target="_blank">
-        <img class="transition-all duration-500 ease-in-out transform hover:scale-110"
-          src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/research3.png">
-      </a>
-      <p class="text-[#808080]">反思层面：基于理论和应用层面的文档，我从反思层面对公司现运营产品展开了体验分析工作。</p>
-    </div>
-  </div>
-  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
-    <p class="text-[48px] PF-sm pt-[64px]">研究结论。</p>
-  </div>
-  <div class=" bg-white px-[96px] pt-[96px] flex space-x-[36px]">
-    <div>
-      <p class="w-2/3 text-[48px] PF-sm colorful_title">我们定义了四个关键问题，并通过HMW法转译为设计目的，再使用GSM模型指导体验设计策略：</p>
-    </div>
-  </div>
-  <div class="px-[96px] pb-[24px] pt-[56px]">
-    <p class="PF-m text-[24px] text-[#808080]">问题（Problem）</p>
-  </div>
-  <div class="px-[96px] flex space-x-[24px]">
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#E42F32] text-[32px] PF-sm">😞社交信任缺失</p>
-      <p class="text-black/60 text-[20px] PF-r">陌生人社交缺乏可信身份验证与情感联结载体，虚假身份与防御心理可能导致互动转化率持续走低。<br>
-        *例如，付费通话功能因缺乏身份认证导致转化瓶颈。</p>
-    </div>
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#E42F32] text-[32px] PF-sm">😞多场景体验割裂</p>
-      <p class="text-black/60 text-[20px] PF-r">功能场景的视觉与交互同质化造成认知混淆，不同设备环境中的操作断层加剧体验碎片化。<br>
-        *例如，房间页与首页视觉相似度高造成操作迷航。 </p>
-    </div>
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#E42F32] text-[32px] PF-sm">😕功能理性失衡</p>
-      <p class="text-black/60 text-[20px] PF-r">功能增长与堆砌导致情感体验缺失，用户决策路径模糊化，引发社交行为阻滞。<br>
-        *例如，新用户迷失在复杂的玩法中，反而不知道如何经营真实社交。</p>
-    </div>
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#FFF2F2] border border-[#FFCECE] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#E42F32] text-[32px] PF-sm">😕视觉熵增失控</p>
-      <p class="text-black/60 text-[20px] PF-r">业务快速扩张冲击设计系统稳定性，模块重复开发与规范失控导致系统性失衡。<br>
-        *例如，运营内容与用户生产比例失衡。</p>
-    </div>
-  </div>
-  <div class="px-[96px] pb-[24px] pt-[56px]">
-    <p class="PF-m text-[24px] text-[#808080]">我们如何...（How Might We...）</p>
-  </div>
-  <div class="mx-[96px] flex space-x-[24px]">
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何让陌生人快速确认真实身份并进行主动互动？</p>
-      <p class="text-black/60 text-[20px] PF-r">
-        · 如何建立可信互动基准？<br>
-        · 如何减少用户建立信任的成本？<br>
-        · 如何提供可控的安全社交环境？</p>
-    </div>
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何实现跨场景体验的无缝衔接，构建统一的交互心智模型？</p>
-      <p class="text-black/60 text-[20px] PF-r">
-        · 如何建立跨场景的认知导航模式？<br>
-        · 如何建立场景关联线索？<br>
-        · 如何保证多端场景的体验一致性？</p>
-    </div>
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何平衡情感化表达与功能效率的对抗性需求？</p>
-      <p class="text-black/60 text-[20px] PF-r">
-        · 如何与产运端进行博弈？<br>
-        · 如何在功能在增长中维系情感体验？</p>
-    </div>
-    <div
-      class="w-full flex flex-col space-y-[16px] bg-[#E8FFE7] border border-[#D1E6D0] rounded-[24px] px-[40px] py-[40px]">
-      <p class="text-[#000000] text-[32px] PF-sm">💡我们如何在功能迭代过程中维持系统的视觉秩序和可扩展性？</p>
-      <p class="text-black/60 text-[20px] PF-r">
-        · 如何使商业目标与设计秩序共生？<br>
-        · 如何让新内容继承系统基因？<br>
-        · 如何保证设计落地与追踪？</p>
-    </div>
-  </div>
-
-  <div class="px-[96px] pb-[24px] pt-[56px]">
-    <p class="PF-m text-[24px] text-[#808080]">GSM（点击下方卡片可展开查看详细GSM列表）</p>
-  </div>
-  <div class="mx-[96px] mb-[96px] flex space-x-[24px]">
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_01.png"
-      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-      <p class="text-[#000000] text-[32px] PF-sm">🎯建立可视化信任体系与低压力互动环境，延长用户社交行为。</p>
-      <p class="w-full text-center text-black/60 text-[20px] PF-r">
-        展开</p>
-    </div>
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_02.png"
-      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-      <p class="text-[#000000] text-[32px] PF-sm">🎯在复杂场景切换中维持用户的空间定位感与操作连贯性。</p>
-      <p class="w-full text-center text-black/60 text-[20px] PF-r">
-        展开</p>
-    </div>
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_03.png"
-      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-      <p class="text-[#000000] text-[32px] PF-sm">🎯构建既满足情感共鸣又保证决策效率的复合体验框架。</p>
-      <p class="w-full text-center text-black/60 text-[20px] PF-r">
-        展开</p>
-    </div>
-    <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/GSM_04.png"
-      class="openModal w-full flex flex-col space-y-[20px] bg-[#F5F7FA] border border-[#DDDFE1] rounded-[24px] px-[40px] pt-[40px] pb-[32px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-      <p class="text-[#000000] text-[32px] PF-sm">🎯构建可扩展的设计语言，平衡功能迭代与体验一致性。</p>
-      <p class="w-full text-center text-black/60 text-[20px] PF-r">
-        展开</p>
-    </div>
-  </div>
-
-  <div class="bg-[#F5F7FA] pt-[96px] pb-[48px] px-[96px]">
-    <p class="w-2/3 text-[48px] PF-sm colorful_title">根据研究结论，我设计了Byme的一级页初稿。在下面，您可以看到我的设计如何回应上述GSM。
+  <!--background-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Background</p>
+    <p class="text-black/80 PF-m text-[48px] mb-[56px]">
+      首先，让我们了解该案例研究的背景：产运团队指出，视频匹配功能上线7日后，10s等待放弃率高达32%，匹配流程完成率低于50%，营收效果远低于预期，体验侧需要介入诊断和优化。
+    </p>
+    <p class="text-black/50 PF-m text-[20px]">10s等待放弃率：等待10秒后主动放弃的用户数/启动匹配流程的总用户数*100%（一日内）
+      <br>匹配流程完成率：成功匹配并接通的用户数/启动匹配流程的总用户数*100%（一日内）
     </p>
   </div>
-  <div class="bg-[#F5F7FA] px-[96px]">
-    <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/idea.png">
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_1.png">
+  <!--Research Plan-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Research Plan</p>
+    <p class="text-black/80 PF-m text-[48px]">
+      了解需求背景后，我们制定了一个为期5天的计划，包括用户研究（3天）及方案产出（2天）。下图展示了详细的研究框架，包括问卷法、访谈法、数据分析和体验指标制定等。
+    </p>
   </div>
-
-  <!-- 导航 -->
-  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
-    <p class="text-[48px] PF-sm pt-[64px]">先看亮点。</p>
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_2.png">
+  <!--Questionnaire-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Questionnaire</p>
+    <p class="text-black/80 PF-m text-[48px] mb-[56px]">
+      出于效率考虑，团队先在内部进行了定性归因，再将可能影响数据的因素筛选整理成问卷，发放给目标用户进行验证。其结论是，😵等待焦虑感、🎁价值感知不足是导致用户放弃匹配的直接原因，也是体验设计的可干预因素。
+    </p>
+    <p class="text-black/50 PF-m text-[20px] w-2/3">
+      起初，根据数据结果，我们认为耗时长是核心痛点。但与PM沟通后发现，由于平台处于初期，主播数量不足，因此匹配时间长的问题无法避免。如果强行缩短，用户可能匹配到劣质对象，影响留存。权衡后，我们决定将“算法效率”这一不可控项，转化为“感知效率”这一可控设计命题。
+    </p>
+  </div>
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_3.png">
+  <!--Interview-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Interview</p>
+    <p class="text-black/80 PF-m text-[48px]">
+      为深入挖掘问卷中“等待焦虑”与“价值感知不足”的成因，我们通过访谈聚焦用户主观决策心理与场景细节，发现三大隐性矛盾：系统反馈的信任危机<a
+        class="text-black/20">（如虚假“进度条”反而可能加剧质疑）</a>，分层价值认知差异<a class="text-black/20">（高低频用户对功能的认知不一致）</a>，交互灵活度缺失<a
+        class="text-black/20">（等待期间无互动、无法后台挂起）。</a>
+    </p>
+  </div>
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_4.png">
+  <!--Game-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Game</p>
+    <p class="text-black/80 PF-m text-[48px]">
+      基于上述矛盾，设计、产品、技术团队围绕解决方案进行了三次博弈。您可以在下面查看要点，以了解我们如何克服团队协作的挑战：
+    </p>
+  </div>
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_5.png">
+  <!--1st Design Iteration-->
+  <div class="px-[96px] pt-[176px] pb-[88px]" id="finaldesign">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">1st Design Iteration</p>
+    <p class="text-black/80 PF-m text-[48px]">
+      根据博弈结果，我们形成了初版的解决方案。接下来，您将首先了解该方案的UX/UI设计如何回应前述的三项挑战，之后可查看实际动效演示。
+    </p>
+  </div>
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_6.png">
+  <video class="w-full h-auto" autoplay loop muted playsinline style="mix-blend-mode: darken;">
+    <source src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_pro.webm">
+  </video>
+  <!--2nd Design Iteration-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Game</p>
+    <p class="text-black/80 PF-m text-[48px]">
+      经过设计评审，我们将第二次迭代的重心设置为流程、状态的补全和UI细节的调整。例如，我们优化了匹配取消页、视频通话页、视频结束页的UI设计，以使整体的视觉风格更一致、精致。
+    </p>
+  </div>
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_7.png">
+  <!--User Experience Metrics-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Game</p>
+    <p class="text-black/80 PF-m text-[48px]">
+      最后，我们根据Google GSM模型，制定了相应的体验指标，并与产品、开发合作设置埋点，用于验证设计效果。下面是具体的执行过程，包括最终的数据效果。
+    </p>
+  </div>
+  <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/byme_video_content_8.png">
+  <!--Future Design Iteration-->
+  <div class="px-[96px] pt-[176px] pb-[88px]">
+    <p class="text-black/50 PF-sm text-[32px] mb-[24px]">Game</p>
+    <p class="text-black/80 PF-m text-[48px]">
+      功能优化上线后，视频匹配Ⅱ期取得了如期的数据增长。在未来，考虑到玩法的分散度和复杂度，Ⅲ期可能将视频与语音匹配玩法进行深度整合。如果您感兴趣，请订阅本网站以查看实时更新。<a
+        class="underline">此外，如果您希望浏览更多关于Byme的设计工作，可以点击展开下面的卡片，以查看设计速览。</a>
+    </p>
   </div>
 
   <!-- 先看亮点 -->
-  <div class="bg-[#F5F7FA] px-[96px]">
+  <div class="bg-[#F5F7FA] px-[96px] pt-[88px]">
     <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/01_2.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_01.png">
       </div>
-      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/02_2.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_02.png">
-      </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/03.png"
         class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_03.png">
       </div>
-    </div>
-    <div class="flex">
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/04_2.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        class="openModal ml-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/card_04.png">
+      </div>
+    </div>
+
+    <div class="flex">
+      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/06.png"
+        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_01.png">
       </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/05.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
@@ -267,17 +209,8 @@
     </div>
   </div>
 
-  <!-- 再看难点 -->
-  <!-- 导航 -->
-  <div class="flex bg-[#F5F7FA] h-[180px] justify-between px-[96px]">
-    <p class="text-[48px] PF-sm pt-[64px]">再看难点。</p>
-  </div>
   <div class=" bg-[#F5F7FA] px-[96px]">
     <div class="flex">
-      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/06.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_01.png">
-      </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/07.png"
         class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_02.png">
@@ -286,17 +219,9 @@
         class="openModal mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_03.png">
       </div>
-    </div>
-    <div class="flex">
-      <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/09.png"
-        class="openModal mr-[24px] mb-[24px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
-        <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_04.png">
-      </div>
       <div data-image="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/10_change.png"
-        class="openModal mr-[24px] mb-[96px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
+        class="openModal ml-[24px] mb-[96px] hover:cursor-pointer transition-all duration-500 ease-in-out transform hover:scale-[1.01] hover:drop-shadow-[0_35px_35px_rgba(0,0,0,0.1)]">
         <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cardB_05.png">
-      </div>
-      <div class="w-[560px]">
       </div>
     </div>
   </div>
