--- a/index.html
+++ b/index.html
@@ -134,6 +134,22 @@
       </div>
     </section>
     <section class="flex bg-[#F5FAFD]">
+      <!-- quin -->
+      <div class="w-1/2 h-auto cursor-not-allowed">
+        <div
+          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[12px] pr-[6px] relative ease-in-out transform duration-300 transition-all">
+          <a href="https://medium.com/@alstonchvita/因爲糟糕的用戶體驗-我重新設計了這款ai占卜產品-quin-cac9bf025dd4" target="_blank">
+            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
+              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/quin_cover.png">
+          </a>
+          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
+            <img src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/quin_logo.png">
+            <p class="text-black PF-sm">Quin
+            <p class="text-black PF-r opacity-30"></p>
+            </p>
+          </div>
+        </div>
+      </div>
       <!-- gafalib -->
       <div class="w-1/2 h-auto">
         <div
@@ -145,22 +161,6 @@
           <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
             <img src="media/logo_gafa.png">
             <p class="text-black PF-sm">GAFALib</p>
-          </div>
-        </div>
-      </div>
-      <!-- compet -->
-      <div class="w-1/2 h-auto cursor-not-allowed">
-        <div
-          class="bg-[#F5FAFD] pt-[6px] pb-[6px] pl-[6px] pr-[12px] relative ease-in-out transform duration-300 transition-all">
-          <a>
-            <img class="w-full h-auto rounded-[48px] hover:brightness-110 ease-in-out duration-300"
-              src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/cover_COMPET.png">
-          </a>
-          <div class="absolute top-[40px] left-[40px] text-[28px] flex justify-normal space-x-[8px]">
-            <img src="media/logo_compet.png">
-            <p class="text-black PF-sm">Compet
-            <p class="text-black PF-r opacity-30">(Coming soon...)</p>
-            </p>
           </div>
         </div>
       </div>
