--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="min-w-[1376px]">
   <!-- Navbar -->
   <div class="bg-[#F6FAFD]">
-    <nav class="flex justify-between w-full px-16 py-10 z-30 animate__animated animate__fadeInDown">
+    <nav class="flex justify-between w-full px-16 py-10 z-30 animate__animated animate__fadeInDown absolute">
       <div class="flex justify-normal w-1/3 space-x-8">
         <a href="#works"
           class="flex justify-center w-[144px] h-16 justify-normal text-xl rounded-full border border-black/20 text-black hover:bg-black hover:text-white hover:border-0 transition-all duration-300 ease-in-out"><button>✏️
@@ -40,7 +40,7 @@
 
   <!-- Hero Section -->
   <div>
-    <div class="z-0 animate__animated animate__fadeIn">
+    <div class="z-0 animate__animated animate__fadeIn ">
       <video class="w-full h-auto" autoplay loop muted playsinline style="mix-blend-mode: darken;">
         <source src="https://zackzha-img.oss-cn-shenzhen.aliyuncs.com/homepage_bg.webm">
       </video>
